# rust-serde-value-flatten

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
src/: lib.rs  ser.rs
tests/: test_option.rs
